#############################################
# pyproject.toml
# Modern Python project configuration file
#############################################

[build-system]

# Tools required to build the project
requires = ["setuptools>=42.0", "wheel"]

# Backend used to build the Python package
build-backend = "setuptools.build_meta"



#############################################

[tool.pytest.ini_options]

# Minimum pytest version required
minversion = "6.0"

# Additional pytest command line options
addopts = "-ra -q"

# Directory where pytest should look for tests
testpaths = [
    "tests"
]



#############################################

[tool.mypy]

# Directory where source code exists
mypy_path = "src"

# Ignore missing type hints from external libraries
ignore_missing_imports = true