#############################################
# pyproject.toml
# Modern Python project configuration file
#############################################

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"



#############################################

[project]

name = "mongodbconnector"
version = "0.0.1"
description = "A reusable MongoDB connector and CRUD utility for Python applications"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name="Afia Ishaq", email="afia.ishaq@riphah.edu.pk" }
]

dependencies = [
    "pymongo"
]



#############################################

[tool.pytest.ini_options]

minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]



#############################################

[tool.mypy]

mypy_path = "src"
ignore_missing_imports = true