#############################################
# setup.cfg
# Configuration file for packaging the project
#############################################

[metadata]

# License type for the project
license = MIT

# License file included with the package
license_file = LICENSE

# Classifiers help tools like PyPI understand
# what environment this package supports
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent


#############################################

[options]

# Automatically include packages inside the project
packages = find:

# External dependencies required to run the project
install_requires =
    pymongo
    pandas
    numpy
    ensure
    py-youtube

# Minimum Python version required
python_requires = >=3.7


#############################################

[options.extras_require]

# Additional dependencies used for testing and development
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0


#############################################

[options.package_data]

# Include additional files inside the package if needed
* = *.txt, *.md


#############################################

[flake8]

# Maximum line length for code style checks
max-line-length = 160

# Ignore specific directories during linting
exclude =
    .git,
    __pycache__,
    build,
    dist